--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="btn_find">Find Device</string>
     <string name="no_bluetooth">Bluetooth is not available</string>
     <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Exiting.</string>
+    <string name="press_again_exit">Press again to exit.</string>
     <string name="unable_to_connect">Unable to connect to device</string>
     <string name="connection_lost">Device connection was lost</string>
     <string name="button_scan">Scan for devices</string>
